Fix how to use truncate class

--- a/extensions/Chrome Web/styles.css
+++ b/extensions/Chrome Web/styles.css
@@ -34,6 +34,11 @@ h4 {
   margin-right: 8px;
 }
 
+#sites-list p {
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+}
+
 #sites-list a {
   display: flex;
   align-items: center;
@@ -46,12 +51,10 @@ h4 {
   cursor: pointer;
   margin-bottom: 10px;
   padding: 8px;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
   transition: 300ms;
   color: black;
   text-decoration: none;
+  font-size: 12px;
 }
 
 #sites-list li:hover {
@@ -82,7 +85,6 @@ button {
   outline: none;
   padding: 8px;
   border-radius: 6px;
-  ;
 }
 
 #sites-list .truncate {
